<resources>
    <string-array name="orientation_items">
        <item>Автоматически</item>
        <item>Ландшафтная</item>
        <item>Портретная</item>
    </string-array>
    <string-array name="orientation_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="app_name">Дневники</string>
    <string name="menu_settings">Настройки</string>
    <string name="title_activity_authorization_form">Форма авторизации</string>
    <string name="login">Логин</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="not_impl_sc">Еще не реализовано</string>
    <string name="details_missing">Необзодимо заполнить поля логина и пароля</string>
    <string name="title_activity_diary_list">Список дневников</string>
    <string name="loading">Загрузка…</string>
    <string name="please_wait">Авторизация…</string>
    <string name="title_activity_launch">Дневники</string>
    <string name="loading_data">Загрузка данных…</string>
    <string name="favourites">Список</string>
    <string name="communities">Сообщества</string>
    <string name="my_diary">Дневник</string>
    <string name="discussions">Дискуссии</string>
    <string name="file_not_found">Файл не найден</string>
    <string name="saved_to">Сохранено:</string>
    <string name="image_save">Сохранить</string>
    <string name="image_open">Открыть</string>
    <string name="really_exit">Правда выйти?</string>
    <string name="image_copy_url">Скопировать ссылку</string>
    <string name="image_fullsize">И так все видно!</string>
    <string name="image_open_link">Открыть ссылку</string>
    <string name="image_action">Выберите действие</string>
    <string name="author">Автор</string>
    <string name="title">Заголовок</string>
    <string name="last_post">Последний пост</string>
    <string name="post_date">дата сообщения</string>
    <string name="author_avatar">Аватарка</string>
    <string name="comments">Комментарии</string>
    <string name="diary_logo">Логотип заголовка Diary.Ru</string>
    <string name="logout_drawable">лого выхода</string>
    <string name="without_title">Без названия</string>
    <string name="posts">Избранное</string>
    <string name="getting_user_info">Загрузка данных…</string>
    <string name="comments_disabled">отключены</string>
    <string name="community">Сообщество</string>
    <string name="new_post">Новый пост</string>
    <string name="parsing_data">Обработка данных…</string>
    <string name="message_title">Заголовок</string>
    <string name="message_content">Содержимое</string>
    <string name="message_themes">Темы</string>
    <string name="message_music">Музыка</string>
    <string name="message_mood">Настроение</string>
    <string name="message_publish">Отправить</string>
    <string name="message_optional">Дополнительно</string>
    <string name="message_poll">Опрос</string>
    <string name="message_poll_title">Название вопроса</string>
    <string name="message_poll_choice">Вариант выбора</string>
    <string name="sending_data">Отправка данных…</string>
    <string name="message_subscribe">Подписаться</string>
    <string name="new_comment">Новый комментарий</string>
    <string name="sorting_data">Сортировка данных…</string>
    <string name="images_autoload">Автозагрузка изображений</string>
    <string name="images_autoload_summary">Используйте с осторожностью! Может вызвать переполнение доступной памяти!
    </string>
    <string name="post_signature">Подпись к сообщению</string>
    <string name="post_signature_summary">Подпись, которая будет добавлена к любому сообщению, которое вы добавите через
        приложение.
    </string>
    <string name="posted_via_client">;Android-клиент;anticitizen.diary.ru</string>
    <string name="post_tags">Тэги поста по умолчанию</string>
    <string name="post_tags_summary">Тэги, которые будут добавлены к любому посту, который вы опубликуете</string>
    <string name="cache_size">Максимальный размер кэша</string>
    <string name="cache_size_summary">Размер кэша, используемого для картинок и постов, в МБ</string>
    <string name="autoload_cached_images">Автозагрузка кэша</string>
    <string name="autoload_cached_images_summary">Если изображение имеется в кэше, то по клику оно загружается из
        памяти. Выберите, чтобы автоматически загружать все такие изображения без клика.
    </string>
    <string name="menu_share">Отправить</string>
    <string name="copied">Скопировано:</string>
    <string name="message_close">Закрытый пост</string>
    <string name="message_close_only_reg">Только для зарегистрированных</string>
    <string name="message_close_only_fav">Только для избранных</string>
    <string name="message_close_only_sub">Только для ПЧ</string>
    <string name="message_close_only_white">Только для белого списка</string>
    <string name="message_close_for_list">Закрыто для списка</string>
    <string name="message_close_only_list">Открыто для списка</string>
    <string name="message_close_for_all">Закрыто для всех</string>
    <string name="message_close_denied_list">Список запрещенных</string>
    <string name="message_close_allowed_list">Список разрешенных</string>
    <string name="message_close_text">Текст уведомления о закрытии</string>
    <string name="gradient_button">Преобразовать в градиент</string>
    <string name="application_description">&lt;b>@Дневники&lt;/b>&lt;br/>Андроид-клиент &lt;br/> для сайта Diary.ru&lt;br/>Версия:
        &lt;b>1.4.6&lt;/b>&lt;br/>Сообщество: &lt;a href="http://antic1tizen.diary.ru">Android &amp; Diary.Ru&lt;/a>
    </string>
    <string name="author_description">Автор: &lt;b>Адонай&lt;/b>&lt;br/>Дневник: &lt;a href="http://dron01.diary.ru">Not
        an Option&lt;/a>&lt;br/> Если желаете поучаствовать&lt;br/> или помочь, пожалуйста, пишите на &lt;br/>&lt;a
        href="mailto:adonai@xaker.ru">adonai@xaker.ru&lt;/a>
    </string>
    <string name="about">О программе</string>
    <string name="gpl_notice">Это свободная программа: вы можете перераспространять ее и/или изменять ее на условиях
        Стандартной общественной лицензии GNU в том виде, в каком она была опубликована Фондом свободного программного
        обеспечения; либо версии 3 лицензии, либо (по вашему выбору) любой более поздней версии. \n Эта программа
        распространяется в надежде, что она будет полезной, но БЕЗО ВСЯКИХ ГАРАНТИЙ; даже без неявной гарантии ТОВАРНОГО
        ВИДА или ПРИГОДНОСТИ ДЛЯ ОПРЕДЕЛЕННЫХ ЦЕЛЕЙ. Подробнее см. в Стандартной общественной лицензии GNU. \n Вы должны
        были получить копию Стандартной общественной лицензии GNU вместе с этой программой. Если это не так, см.
        http://www.gnu.org/licenses/
    </string>
    <string name="diary_tags">Тэги дневника</string>
    <string name="subscribers_list">Список ПЧ</string>
    <string name="incoming_mail">Входящие</string>
    <string name="outcoming_mail">Исходящие</string>
    <string name="menu_close">Остановка и выход</string>
    <string name="umail_activity_title">U-Mail Папки</string>
    <string name="umail_description">Почтовая служба UMail</string>
    <string name="quotes_decription">Цитатник пользователя</string>
    <string name="message_to">Получатель</string>
    <string name="message_need_receipt">Подтверждение о прочтении</string>
    <string name="message_copy">Сохранить сообщение</string>
    <string name="new_umail">Новый U-Mail</string>
    <string name="reply_umail">Ответить</string>
    <string name="message_send_error">Ошибка отправки сообщения</string>
    <string name="message_send_ok">Сообщение успешно отправлено</string>
    <string name="sticky_service">Держать сервис в памяти</string>
    <string name="sticky_service_sum">Если включено, сервис будет всегда оставаться активным, даже при нехватке памяти.
        В этом случае приложению не нужно перезагружать данные при переключении.
    </string>
    <string name="service_notification">сервис Diary.Ru работает</string>
    <string name="refresh">Обновить</string>
    <string name="menu_goto_top">Наверх</string>
    <string name="really_delete">Правда удалить?</string>
    <string name="select_custom_avatar">Сменить аватар</string>
    <string name="avatar_selected">Аватар успешно установлен</string>
    <string name="edit_comment">Редактирование комментария</string>
    <string name="edit_post">Редактирование поста</string>
    <string name="overscroll_button">Быстрая прокрутка</string>
    <string name="menu_special_paste">Специальная вставка</string>
    <string name="italic">Курсив</string>
    <string name="bold">Полужирный</string>
    <string name="nick">Псевдоним</string>
    <string name="underlined">Подчеркнутый</string>
    <string name="link">Ссылка</string>
    <string name="image">Изображение</string>
    <string name="paste_clipboard">Вставить из буфера обмена</string>
    <string name="codepage_missing">Кодировка не найдена!</string>
    <string name="not_authorized">Не авторизованы, попробуйте снова!</string>
    <string name="service_not_running">Сервис не запущен!</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="completed">Выполнено!</string>
    <string name="no_file_manager_found">Пожалуйста, установите файловый менеджер!</string>
    <string name="select_file">Выберите файл для отправки</string>
    <string name="notify_updates">Уведомлять о новых комментариях</string>
    <string name="notify_updates_sum">Делать проверку на наличие новых комментариев время от времени</string>
    <string name="new_comments">Новые комментарии</string>
    <string name="keep_device_on">Держать телефон включенным</string>
    <string name="keep_device_on_sum">Необходимо, чтобы сервис всегда получал уведомления о новых комментариях, а не только при включенном экране. Внимание! Садит батарейку, поскольку телефон не уходит в режим полного сна.</string>
    <string name="webview_font_size">Размер шрифта</string>
    <string name="webview_font_size_sum">Минимальный размер шрифта на вебформах</string>
    <string name="invalid_number">Неверное число</string>
    <string name="pack_inoriginal">Как есть</string>
    <string name="pack_inmore">В [more]</string>
    <string name="pack_inlink">В превью</string>
    <string name="howto_send_img">Как разместить изображение?</string>
    <string name="upload_progress">Загружено:</string>
    <string name="closed_error">Эта страница закрыта её автором</string>
    <string name="delete_umails">Удалить отмеченные</string>
    <string name="select_items">Выберите письма</string>
    <string name="selected">Выбрано:</string>
    <string name="more">Тэг MORE</string>
    <string name="read_more">читать дальше</string>
    <string name="message_requote">Цитировать предыдущую переписку</string>
    <string name="smilies">Смайлы</string>
    <string name="ad_title">Уведомление</string>
    <string name="ad_text">Помните, что Diary.Ru Клиент - это маленький некоммерческий проект с открытым исходным кодом, который преимущественно разрабатываю я один. &lt;br/>&lt;br/> Если желаете поддержать развитие проекта, можете это сделать сейчас. &lt;br/> Если у вас есть вопросы или предложения по работе клиента, пишите в &lt;a href="http://antic1tizen.diary.ru/p193090337.htm">сообщество&lt;/a> &lt;br/>  (Данное уведомление можно отключить в настройках)</string>
    <string name="help">Помочь проекту…</string>
    <string name="later">Позже</string>
    <string name="thanks">Вы только что сделали мир немного лучше!</string>
    <string name="show_version">Показывать дисклеймер</string>
    <string name="show_version_sum">Показывать список изменений и просьбы к сообществу после обновления обновлении</string>
    <string name="confirmation">Подтвердите действие</string>
    <string name="clear_contents">Вы собираетесь отправить сообщение в тот же дневник. Желаете очистить поля ввода?</string>
    <string name="no">Нет</string>
</resources>