<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_new_post"
        android:title="@string/new_post"
        android:orderInCategory="100"
        android:showAsAction="always|withText" 
        android:icon="@android:drawable/ic_menu_add" />
    
    <item android:id="@+id/menu_new_comment" 
        android:orderInCategory="101" 
        android:title="@string/new_comment" 
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always|withText" />
    <item android:id="@+id/menu_tags" android:title="@string/diary_tags" android:icon="@android:drawable/ic_menu_agenda"></item>
    <group android:id="@+id/group_all" android:menuCategory="container">
        <item android:id="@+id/menu_share" android:title="@string/menu_share" android:icon="@android:drawable/ic_menu_share"></item>
        <item android:id="@+id/menu_about" android:title="@string/about" android:icon="@android:drawable/ic_menu_help"></item>
        <item android:id="@+id/menu_settings" android:title="@string/menu_settings" android:icon="@android:drawable/ic_menu_preferences"></item>
        <item android:id="@+id/menu_close_app" android:title="@string/menu_close" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>
    </group>
    <item android:id="@+id/menu_subscr_list" android:title="@string/subscribers_list" android:icon="@android:drawable/ic_menu_agenda"></item>
    <group android:id="@+id/group_web">
        <item android:id="@+id/menu_refresh" android:title="@string/refresh" android:icon="@drawable/default_ptr_rotate" android:showAsAction="always|withText"></item>
        <item android:id="@+id/menu_up" android:title="@string/menu_goto_top" android:icon="@drawable/ic_menu_up" android:showAsAction="never|withText"></item>
    </group>
</menu>
