<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/message_title_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_title" />

    <EditText
        android:id="@+id/message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
        
    <TextView
        android:id="@+id/message_content_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_content" />

    <EditText
        android:id="@+id/message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
        
    <TextView
        android:id="@+id/message_themes_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_themes" />

    <EditText
        android:id="@+id/message_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    <TextView
        android:id="@+id/message_music_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_music" />

    <EditText
        android:id="@+id/message_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    <TextView
        android:id="@+id/message_mood_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_mood" />

    <EditText
        android:id="@+id/message_mood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

</LinearLayout>