<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="50dip"
    android:paddingRight="10dip" >

    <TextView
        android:id="@+id/discussion_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:drawable/list_selector_background"
        android:ellipsize="marquee"
        android:maxEms="15"
        android:text="@string/title"
        android:textSize="16dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/discussion_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/author"
        android:textSize="10dip" />

    <TextView
        android:id="@+id/discussion_last_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:maxEms="20"
        android:text="@string/last_post"
        android:textSize="8dip" />

</LinearLayout>